# jccapstone

./: .gitignore  CMakeLists.txt  README.md
protos/: jccapstone.proto
src/: grpc_client.cpp  grpc_client.hpp  grpc_server.cpp  grpc_server.hpp
